# monoclone-ros-teleop

./: .gitignore  CMakeLists.txt  package.xml  readme.md  requirements.txt  setup.py
assets/peg_ins/: gazebo_ambient_light.world
assets/peg_ins/hole/: hole.dae  hole.stl  model.sdf
assets/peg_ins/peg/: METRICS.txt  model.sdf
assets/peg_ins/peg/materials/: texture.material
assets/simcam/: model.config  model.sdf
assets/simcam/meshes/: D455_Solid.SLDPRT
launch/: camera.launch  observer.launch  teleop.launch
scripts/: build.sh  run_cam.sh  run_dri.sh  run_gz.sh  run_obs.sh  run_tel.sh
src/: camera.py  main.py  observer.py  realcam.py
src/teleop/: __init__.py  config.py  gazebo_api.py  kinova_arm.py  utils.py
src/teleop/task/: peg_ins.py
test/: arm_allfunc.py  pegins_allfunc.py
